# cookiecutter-vscode-extension

./: .editorconfig  .gitattributes  .pylintrc  CONTRIBUTING.md  README.md  cookiecutter.json  mypy.ini  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
local_extensions/: __init__.py  functions.py  git.py  globals.py
scripts/: __init__.py  e2e.py  settings.py
scripts/stubs/cookiecutter/: __init__.pyi  main.pyi
{{ cookiecutter.project_slug }}/: .editorconfig  .gitattributes  .gitignore  .yarnrc.yml  README.md  package.json
{{ cookiecutter.project_slug }}/.redport/: manifest.rpt.json
{{ cookiecutter.project_slug }}/.redport/patches/: disable-install-step.patch
{{ cookiecutter.project_slug }}/.yarn/patches/: vsce-npm-2.14.0-c875d1964f.patch
{{ cookiecutter.project_slug }}/extension/: .eslintrc.yaml  LICENSE.txt  README.md  package.json  tsconfig.json
{{ cookiecutter.project_slug }}/extension/contrib/: build.mjs
{{ cookiecutter.project_slug }}/extension/share/: {{ cookiecutter.first_language_slug }}.tmLanguage.json
{{ cookiecutter.project_slug }}/extension/src/: extension.ts  log.ts  logger.ts  time.ts
{{ cookiecutter.project_slug }}/licenses/: Apache-2.0-reference.md
{{ cookiecutter.project_slug }}/{{ cookiecutter.extension_slug }}/: .eslintrc.yaml  package.json
{{ cookiecutter.project_slug }}/{{ cookiecutter.extension_slug }}/src/: errors.ts  index.ts
{{ cookiecutter.project_slug }}/{{ cookiecutter.extension_slug }}/test/: index.test.ts
