[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cookiecutter-vscode-extension"
version = "0.1.0"
description = "Cookiecutter template for generating Visual Studio Code extensions"
authors = ["Claudia Pellegrino <clau@tiqua.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
# We’re pinning Python to an exact minor version for compatibility.
# Keep this number in sync with the minimum Python version
# Cookiecutter supports.
python = "~3.7.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
#
# We’re developing a Cookiecutter template, not a Python package.
# But we’re maintaining a `pyproject.toml` nonetheless because we
# want the benefit of improved IDE support while working on the
# local Jinja extensions.
#
# We’re pinning both the major and minor version for compatibility.
# Keep this in sync with the requirement mentioned in README.md.
cookiecutter = "~2.1.0"
poethepoet = "^0.16.0"

[tool.poe]
verbosity = -1

[tool.poe.tasks]
tasks.cmd = "poetry run poe -v"
tasks.help = "List available tasks"
e2e.script = "scripts.e2e:run"
e2e.help = "Run end-to-end test"
