[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cookiecutter-vscode-extension"
version = "0.1.0"
description = "Cookiecutter template for generating Visual Studio Code extensions"
authors = ["Claudia Pellegrino <clau@tiqua.de>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
# We’re pinning Python to an exact minor version for compatibility.
# Keep this number in sync with the minimum Python version
# Cookiecutter supports, or slightly higher if some development
# dependency (such as Poetry v1.8.3) requires it.
python = "~3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
#
# We’re developing a Cookiecutter template, not a Python package.
# But we’re maintaining a `pyproject.toml` nonetheless because we
# want the benefit of improved IDE support while working on the
# local Jinja extensions.
#
# We’re pinning both the major and minor version for compatibility.
# Keep this in sync with the requirement mentioned in README.md.
cookiecutter = "~2.6.0"
mypy = "^1.0.1"
poethepoet = "^0.16.0"
#
# We’re pinning pylint to a legacy minor version for compatibility
# with the minimum Python version Cookiecutter supports.
# Keep this number in sync with respect to that.
pylint = "^2.13.9"

# Keep these version numbers in sync with Cookiecutter’s `setup.py`.
[tool.poetry.group.provided.dependencies]
binaryornot = ">=0.4.4"
jinja2 = ">=2.7, <4.0.0"
click = ">=7.0,<9.0.0"
pyyaml = ">=5.3.1"
jinja2-time = ">=0.2.0"
python-slugify = ">=4.0.0"
requests = ">=2.23.0"

[tool.poe]
verbosity = -1

[tool.poe.tasks]
tasks.cmd = "poetry run poe -v"
tasks.help = "List available tasks"
e2e.script = "scripts.e2e:run"
e2e.help = "Run end-to-end test"
linter.cmd = "pylint --enable-all-extensions local_extensions scripts"
linter.help = "Check for style violations"
typecheck.cmd = "mypy"
typecheck.help = "Run static type checker"
